# sciencebeam-judge

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.notebook.txt  requirements.prereq.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  github-actions-ci.yml
docs/: python_library.md
example-data/pmc-sample-1943-cc-by-subset-results/cermine/evaluation-results/: grobid-formatted-summary-00000-of-00001.txt  summary-00000-of-00001.csv
example-data/pmc-sample-1943-cc-by-subset-results/grobid-tei/evaluation-results/: grobid-formatted-summary-00000-of-00001.txt  summary-00000-of-00001.csv
notebooks/: conversion-results-summary.ipynb
sciencebeam_judge/: evaluation_config.py  evaluation_pipeline.py  extract_fields.py  grobid_evaluate.py
sciencebeam_judge/evaluation/: metrics.py  score_aggregation.py
sciencebeam_judge/evaluation/custom/: bounding_box_intersection.py
sciencebeam_judge/resources/: __init__.py
tests/: evaluation_config_test.py  evaluation_pipeline_test.py  grobid_evaluate_test.py
tests/default_xml_mapping/: conftest.py
tests/evaluation/: score_aggregation_test.py
tests/utils/: distance_matching_profile.py
